# improviz

./: .gitignore  .travis.yml  LICENSE  README.md  appveyor.yml  grammar.md  hydra.pz  improviz.cabal  improviz.yaml  proviz.cabal  stack.yaml
.github/workflows/: linux-release.yaml  release.yaml  tests.yaml  windows-release.yaml
assets/html/: editor.html
assets/shaders/: basic.frag  savebuffer.vert  textrenderer.frag  texture.vert
assets/static/editor/: app.js  index.html  main.css
docs/: CNAME  Gemfile  _config.yml  configuration.md  development.md  filters.md  gallery.html  geometries.md  getting-started.md  grammar.md  how-it-works.md  index.md  interacting.md  language.md  materials.md  osc.md  reference.md  textures.md  web.md
docs/_layouts/: default.html  index.html
docs/assets/css/: style.scss
docs/bytecode/: assignex  biggerex  funcex  ifex  loopex  machine.md
editor/: editor.md
editor/emacs/: improviz-mode.el
examples/: arranged.pz  blockargs.pz  default.pz  fade.pz  grid.pz  postprocessing-variables.pz  send.sh  shards.pz  simple1.pz  simple2.pz  texture.pz  texture1.pz  texture_feedback.pz  threads.pz  turbine.pz  wobbler.pz
examples/osc-interaction/: osc-examples.md  pd-osc.pd  run-supercollider-interaction-osx.sh  simple-green.pz  supercollider-osc.scd
filters/: config.yaml  motionBlur.yaml  paintOver.yaml  posttest.yaml
geometries/: config.yaml
hellocatfood/geometries/: config.yaml
hellocatfood/gifs/: config.yaml
materials/: barycentric.yaml  basic.yaml  bordered.yaml  ceed.yaml  config.yaml  fade.yaml  hydra.yaml  normalised.yaml  send.sh  stroke.yaml  texture.yaml  webbasic.yaml  weird.yaml  wireframe.yaml  wobbler.yaml
postprocessing/: config.yaml  posttest.yaml
scripts/: build-nix.sh  build-osx.sh  build-win.ps1
shaders/: paintOver.frag  postprocessing.frag  textrenderer-bg.vert  textrenderer.frag  textrenderer.vert  texture.frag  triangles.frag  triangles.vert
src/: AppServer.hs  AppState.hs  AppTypes.hs  Configuration.hs  ErrorHandling.hs  Geometries.hs  Gfx.hs  GfxAst.hs  GfxEngineState.hs  GfxInterpreter.hs  Improviz.hs  LCLangLite.hs  Language.hs  LanguageParser.hs  Logging.hs  Main.hs  Server.hs  Util.hs  Windowing.hs
src/Configuration/: Ast.hs  CLI.hs  CLIConfig.hs  Font.hs  Geometries.hs  Materials.hs  OSC.hs  Screen.hs  Shaders.hs  Textures.hs  YamlConfig.hs
src/Gfx/: Ast.hs  Commands.hs  Context.hs  Engine.hs  EngineState.hs  FontHandling.hs  FreeType.hs  Geometries.hs  GeometryBuffers.hs  GfxAst.hs  GfxEngineState.hs  GfxInterpreter.hs  Interpreter.hs  LoadShaders.hs  Materials.hs  Matrices.hs  OpenGL.hs  PostProcessing.hs  Setting.hs  SettingMap.hs  SettingStack.hs  Shaders.hs  ShapeBuffer.hs  TextRendering.hs  Textures.hs  Types.hs  VAO.hs  VertexBuffers.hs  VertexDataBuffer.hs  VertexIndexBuffer.hs  Windowing.hs
src/Improviz/: Language.hs  Runtime.hs  SystemVars.hs  UI.hs
src/LCLangLite/: Interpreter.hs  LanguageAst.hs  LanguageInterpreter.hs  LanguageParser.hs  StdLib.hs
src/LCLangLite/Interpreter/: Operators.hs  Scope.hs  Types.hs  Values.hs
src/Language/: Ast.hs  ByteCode.hs  Compiler.hs  ImpVM.hs  Interpreter.hs  LanguageAst.hs  LanguageParser.hs  Parser.hs  StdLib.hs
src/Language/Ast/: Transformers.hs
src/Language/Ast/Transformers/: Globalise.hs
src/Language/Compiler/: State.hs
src/Language/ImpVM/: StdLib.hs  Types.hs  VM.hs
src/Language/ImpVM/StdLib/: BlockHandling.hs  ColourOps.hs  Maths.hs  MatrixOps.hs  PostEffects.hs  Shapes.hs
src/Language/Interpreter/: Operators.hs  Scope.hs  StdLib.hs  Types.hs  Values.hs
src/Language/Interpreter/StdLib/: BlockHandling.hs  ColourOps.hs  Materials.hs  Maths.hs  MatrixOps.hs  PostEffects.hs  Shapes.hs  Util.hs
src/Language/Parser/: Errors.hs
src/Language/StdLib/: BlockHandling.hs  CollectionOps.hs  ColourOps.hs  Maths.hs  MatrixOps.hs  PostEffects.hs  Shapes.hs  Util.hs
src/Server/: Http.hs  OSC.hs  Protocol.hs
src/Util/: Setting.hs  SettingMap.hs
src/assets/html/: editor.html
src/assets/shaders/: motionBlur.frag  paintOver.frag  paintOver.vert  savebuffer.frag  simple3d.vert  stroke.frag  textrenderer-bg.frag  texture.frag  texture.vert
stdlib/: filters.pz  matrixOps.pz  screen.pz  shapes.pz  style.pz  textures.pz  transformations.pz  variables.pz
test/: Spec.hs
test/TestHelpers/: GfxAst.hs  GfxContext.hs  Util.hs
test/Tests/: GfxInterpreter.hs  LCLangLite.hs  Language.hs  LanguageParser.hs  VM.hs
test/Tests/Interpreter/: Operators.hs
test/Tests/Language/: Interpreter.hs  Parser.hs  VM.hs
test/Tests/Language/Ast/: Transformers.hs
test/Tests/Language/Ast/Transformers/: Globalise.hs
test/Tests/Language/Interpreter/: Blocks.hs  Expressions.hs  Functions.hs  If.hs  Lists.hs  Loops.hs  Operators.hs  Scoping.hs
test/Tests/Language/Parser/: Assignment.hs  Blocks.hs  Collections.hs  Comments.hs  ErrorCatching.hs  Functions.hs  General.hs  If.hs  Lambda.hs  Lists.hs  Loops.hs  Operators.hs  Symbols.hs
test/Tests/Language/StdLib/: CollectionFuncs.hs
test/Tests/LanguageParser/: Assignment.hs  ErrorCatching.hs  Functions.hs  Lambda.hs  Loops.hs
textures/: config.yaml
usercode/: grid.pz  seq.pz
