name:                improviz
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rumblesan/improviz#README.md
license:             BSD3
license-file:        LICENSE
author:              Guy John
maintainer:          guy@rumblesan.com
copyright:           Guy John and contributors
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable improviz
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base >= 4.8 && < 5
                     , bytestring
                     , containers
                     , indents
                     , filepath
                     , file-embed
                     , freetype2
                     , hosc
                     , lens-simple
                     , mtl
                     , optparse-applicative
                     , parsec
                     , random
                     , scotty
                     , stm
                     , text
                     , time
                     , vector
                     , GLFW-b
                     , GLURaw
                     , JuicyPixels
                     , OpenGL
                     , OpenGLRaw
                     , Vec
                     , yaml
                     , aeson
  other-modules:       Server.Http
                     , Server.Protocol
                     , Server.OSC
                     , Configuration
                     , Configuration.CLI
                     , Configuration.Font
                     , Configuration.OSC
                     , Configuration.Screen
                     , ErrorHandling
                     , Logging
                     , Improviz
                     , Improviz.Language
                     , Improviz.UI
                     , Gfx
                     , Gfx.Ast
                     , Gfx.Interpreter
                     , Gfx.EngineState
                     , Gfx.FontHandling
                     , Gfx.Geometries
                     , Gfx.VertexBuffers
                     , Gfx.GeometryBuffers
                     , Gfx.LoadShaders
                     , Gfx.Matrices
                     , Gfx.PostProcessing
                     , Gfx.Shaders
                     , Gfx.TextRendering
                     , Gfx.Textures
                     , Gfx.Windowing
                     , Language
                     , Language.Ast
                     , Language.Parser
                     , Language.Interpreter
                     , Language.Interpreter.Scope
                     , Language.Interpreter.Types
                     , Language.Interpreter.Values
                     , Language.Interpreter.Operators
                     , Language.StdLib
                     , Language.StdLib.CollectionOps
                     , Language.StdLib.Shapes
                     , Language.StdLib.MatrixOps
                     , Language.StdLib.ColourOps
                     , Language.StdLib.BlockHandling
                     , Language.StdLib.PostEffects
                     , Language.StdLib.Maths
  default-language:    Haskell2010

test-suite improviz-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  build-depends:       base >= 4.8 && < 5
                     , bytestring
                     , containers
                     , indents
                     , filepath
                     , file-embed
                     , freetype2
                     , hosc
                     , lens-simple
                     , mtl
                     , optparse-applicative
                     , parsec
                     , random
                     , scotty
                     , stm
                     , split
                     , test-framework
                     , test-framework-hunit
                     , text
                     , time
                     , vector
                     , GLFW-b
                     , GLURaw
                     , HUnit
                     , JuicyPixels
                     , OpenGL
                     , OpenGLRaw
                     , Vec
                     , yaml
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       ErrorHandling
                     , Configuration
                     , Configuration.CLI
                     , Configuration.Font
                     , Configuration.OSC
                     , Configuration.Screen
                     , Logging
                     , Improviz
                     , Improviz.Language
                     , Improviz.UI
                     , Gfx
                     , Gfx.Ast
                     , Gfx.Interpreter
                     , Gfx.EngineState
                     , Gfx.FontHandling
                     , Gfx.Geometries
                     , Gfx.VertexBuffers
                     , Gfx.GeometryBuffers
                     , Gfx.LoadShaders
                     , Gfx.TextRendering
                     , Gfx.Textures
                     , Gfx.Matrices
                     , Gfx.PostProcessing
                     , Gfx.Shaders
                     , Gfx.Windowing
                     , Language
                     , Language.Ast
                     , Language.Parser
                     , Language.Interpreter
                     , Language.Interpreter.Scope
                     , Language.Interpreter.Types
                     , Language.Interpreter.Values
                     , Language.Interpreter.Operators
                     , Language.StdLib
                     , Language.StdLib.Shapes
                     , Language.StdLib.CollectionOps
                     , Language.StdLib.MatrixOps
                     , Language.StdLib.ColourOps
                     , Language.StdLib.BlockHandling
                     , Language.StdLib.PostEffects
                     , Language.StdLib.Maths
                     , Tests.Language
                     , Tests.Language.Interpreter.Blocks
                     , Tests.Language.Interpreter.Expressions
                     , Tests.Language.Interpreter.If
                     , Tests.Language.Interpreter.Functions
                     , Tests.Language.Interpreter.Operators
                     , Tests.Language.Interpreter.Scoping
                     , Tests.Language.Parser
                     , Tests.Language.Parser.Assignment
                     , Tests.Language.Parser.Blocks
                     , Tests.Language.Parser.Collections
                     , Tests.Language.Parser.Functions
                     , Tests.Language.Parser.Lambda
                     , Tests.Language.Parser.Symbols
                     , Tests.Language.Parser.Loops
                     , Tests.Language.Parser.Operators
                     , Tests.Language.Parser.If
                     , Tests.Language.Parser.ErrorCatching
                     , Tests.Language.StdLib.CollectionFuncs
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rumblesan/improviz
