name:                improviz
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rumblesan/improviz#README.md
license:             BSD3
license-file:        LICENSE
author:              Guy John
maintainer:          guy@rumblesan.com
copyright:           Guy John and contributors
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable improviz
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -fwarn-unused-binds -fwarn-unused-imports
  build-depends:       base >= 4.8 && < 5
                     , bytestring
                     , containers
                     , filepath
                     , file-embed
                     , freetype2
                     , hosc
                     , lens-simple
                     , mtl
                     , optparse-applicative
                     , megaparsec >= 7
                     , parser-combinators >= 1
                     , scotty
                     , split
                     , stm
                     , transformers
                     , text
                     , time
                     , vector
                     , GLFW-b
                     , GLURaw
                     , JuicyPixels
                     , OpenGL
                     , OpenGLRaw
                     , Vec
                     , yaml
                     , warp
                     , aeson
  other-modules:       Server
                     , Server.Http
                     , Server.Protocol
                     , Server.OSC
                     , Configuration
                     , Configuration.CLI
                     , Configuration.Font
                     , Configuration.OSC
                     , Configuration.Screen
                     , ErrorHandling
                     , Util
                     , Logging
                     , Improviz
                     , Improviz.Language
                     , Improviz.UI
                     , Gfx
                     , Gfx.Ast
                     , Gfx.Commands
                     , Gfx.Context
                     , Gfx.Engine
                     , Gfx.FontHandling
                     , Gfx.Geometries
                     , Gfx.VertexBuffers
                     , Gfx.GeometryBuffers
                     , Gfx.LoadShaders
                     , Gfx.OpenGL
                     , Gfx.Matrices
                     , Gfx.PostProcessing
                     , Gfx.Shaders
                     , Gfx.TextRendering
                     , Gfx.Textures
                     , Gfx.Types
                     , Windowing
                     , Language
                     , Language.Ast
                     , Language.Ast.Transformers
                     , Language.Ast.Transformers.Globalise
                     , Language.Parser
                     , Language.Parser.Errors
                     , Language.Interpreter
                     , Language.Interpreter.Scope
                     , Language.Interpreter.Types
                     , Language.Interpreter.Values
                     , Language.Interpreter.Operators
                     , Language.StdLib
                     , Language.StdLib.Shapes
                     , Language.StdLib.MatrixOps
                     , Language.StdLib.ColourOps
                     , Language.StdLib.BlockHandling
                     , Language.StdLib.PostEffects
                     , Language.StdLib.Maths
                     , Language.StdLib.Util
  default-language:    Haskell2010

test-suite improviz-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  build-depends:       base >= 4.8 && < 5
                     , bytestring
                     , containers
                     , filepath
                     , file-embed
                     , freetype2
                     , lens-simple
                     , mtl
                     , optparse-applicative
                     , megaparsec >= 7
                     , parser-combinators >= 1
                     , transformers
                     , test-framework
                     , test-framework-hunit
                     , time
                     , vector
                     , HUnit
                     , JuicyPixels
                     , OpenGL
                     , OpenGLRaw
                     , stm
                     , Vec
                     , yaml
                     , aeson
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -fwarn-unused-binds -fwarn-unused-imports
  other-modules:       ErrorHandling
                     , Util
                     , Configuration
                     , Configuration.CLI
                     , Configuration.Font
                     , Configuration.OSC
                     , Configuration.Screen
                     , Logging
                     , Gfx
                     , Gfx.Ast
                     , Gfx.Commands
                     , Gfx.Context
                     , Gfx.Engine
                     , Gfx.FontHandling
                     , Gfx.Geometries
                     , Gfx.VertexBuffers
                     , Gfx.GeometryBuffers
                     , Gfx.LoadShaders
                     , Gfx.OpenGL
                     , Gfx.TextRendering
                     , Gfx.Textures
                     , Gfx.Types
                     , Gfx.Matrices
                     , Gfx.PostProcessing
                     , Gfx.Shaders
                     , Language
                     , Language.Ast
                     , Language.Ast.Transformers
                     , Language.Ast.Transformers.Globalise
                     , Language.Parser
                     , Language.Parser.Errors
                     , Language.Interpreter
                     , Language.Interpreter.Scope
                     , Language.Interpreter.Types
                     , Language.Interpreter.Values
                     , Language.Interpreter.Operators
                     , Language.StdLib
                     , Language.StdLib.Shapes
                     , Language.StdLib.MatrixOps
                     , Language.StdLib.ColourOps
                     , Language.StdLib.BlockHandling
                     , Language.StdLib.PostEffects
                     , Language.StdLib.Maths
                     , Language.StdLib.Util
                     , TestHelpers.GfxContext
                     , TestHelpers.Util
                     , Tests.Language
                     , Tests.Language.Ast.Transformers.Globalise
                     , Tests.Language.Interpreter.Blocks
                     , Tests.Language.Interpreter.Expressions
                     , Tests.Language.Interpreter.If
                     , Tests.Language.Interpreter.Functions
                     , Tests.Language.Interpreter.Operators
                     , Tests.Language.Interpreter.Scoping
                     , Tests.Language.Parser
                     , Tests.Language.Parser.Assignment
                     , Tests.Language.Parser.Blocks
                     , Tests.Language.Parser.Functions
                     , Tests.Language.Parser.Symbols
                     , Tests.Language.Parser.Loops
                     , Tests.Language.Parser.Operators
                     , Tests.Language.Parser.If
                     , Tests.Language.Parser.ErrorCatching
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rumblesan/improviz
