name:                improviz
version:             0.7.1.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rumblesan/improviz#README.md
license:             BSD3
license-file:        LICENSE
author:              Guy John
maintainer:          guy@rumblesan.com
copyright:           Guy John and contributors
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable improviz
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -fwarn-unused-binds -fwarn-unused-imports
  build-depends:       base >= 4.8 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , file-embed
                     , filepath
                     , freetype2
                     , GLFW-b
                     , GLURaw
                     , hosc
                     , JuicyPixels
                     , lens-simple
                     , linear
                     , megaparsec >= 7
                     , mtl
                     , OpenGL
                     , OpenGLRaw
                     , optparse-applicative
                     , parser-combinators >= 1
                     , random
                     , safe
                     , scotty
                     , split
                     , stm
                     , text
                     , time
                     , transformers
                     , vector
                     , warp
                     , wavefront
                     , yaml
  other-modules:       Improviz
                     , Improviz.Runtime
                     , Improviz.UI
                     , Configuration
                     , Configuration.CLI
                     , Configuration.Font
                     , Configuration.Geometries
                     , Configuration.OSC
                     , Configuration.Screen
                     , Configuration.Textures
                     , Gfx
                     , Gfx.Commands
                     , Gfx.Context
                     , Gfx.Engine
                     , Gfx.FontHandling
                     , Gfx.Geometries
                     , Gfx.LoadShaders
                     , Gfx.Matrices
                     , Gfx.OpenGL
                     , Gfx.PostProcessing
                     , Gfx.Shaders
                     , Gfx.TextRendering
                     , Gfx.Textures
                     , Gfx.Types
                     , Gfx.VertexBuffers
                     , Language
                     , Language.Ast
                     , Language.Ast.Transformers
                     , Language.Ast.Transformers.Globalise
                     , Language.Compiler
                     , Language.Compiler.State
                     , Language.ImpVM
                     , Language.ImpVM.StdLib
                     , Language.ImpVM.StdLib.BlockHandling
                     , Language.ImpVM.StdLib.ColourOps
                     , Language.ImpVM.StdLib.Maths
                     , Language.ImpVM.StdLib.MatrixOps
                     , Language.ImpVM.StdLib.PostEffects
                     , Language.ImpVM.StdLib.Shapes
                     , Language.ImpVM.Types
                     , Language.ImpVM.VM
                     , Language.Interpreter
                     , Language.Interpreter.Operators
                     , Language.Interpreter.Scope
                     , Language.Interpreter.StdLib
                     , Language.Interpreter.StdLib.BlockHandling
                     , Language.Interpreter.StdLib.ColourOps
                     , Language.Interpreter.StdLib.Maths
                     , Language.Interpreter.StdLib.MatrixOps
                     , Language.Interpreter.StdLib.PostEffects
                     , Language.Interpreter.StdLib.Shapes
                     , Language.Interpreter.StdLib.Util
                     , Language.Interpreter.Types
                     , Language.Interpreter.Values
                     , Language.Parser
                     , Language.Parser.Errors
                     , Logging
                     , Server
                     , Server.Http
                     , Server.Protocol
                     , Server.OSC
                     , Util
                     , Windowing
  default-language:    Haskell2010

test-suite improviz-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  build-depends:       base >= 4.8 && < 5
                     , aeson
                     , bytestring
                     , containers
                     , file-embed
                     , filepath
                     , freetype2
                     , HUnit
                     , JuicyPixels
                     , lens-simple
                     , linear
                     , megaparsec >= 7
                     , mtl
                     , OpenGL
                     , OpenGLRaw
                     , optparse-applicative
                     , parser-combinators >= 1
                     , random
                     , safe
                     , stm
                     , test-framework
                     , test-framework-hunit
                     , time
                     , transformers
                     , vector
                     , wavefront
                     , yaml
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
                       -fwarn-unused-binds -fwarn-unused-imports
  other-modules:       Configuration
                     , Configuration.CLI
                     , Configuration.Font
                     , Configuration.Geometries
                     , Configuration.OSC
                     , Configuration.Screen
                     , Configuration.Textures
                     , Gfx
                     , Gfx.Commands
                     , Gfx.Context
                     , Gfx.Engine
                     , Gfx.FontHandling
                     , Gfx.Geometries
                     , Gfx.LoadShaders
                     , Gfx.Matrices
                     , Gfx.OpenGL
                     , Gfx.PostProcessing
                     , Gfx.TextRendering
                     , Gfx.Textures
                     , Gfx.Types
                     , Gfx.Shaders
                     , Gfx.VertexBuffers
                     , Language
                     , Language.Ast
                     , Language.Ast.Transformers
                     , Language.Ast.Transformers.Globalise
                     , Language.Compiler
                     , Language.Compiler.State
                     , Language.ImpVM
                     , Language.ImpVM.StdLib
                     , Language.ImpVM.StdLib.BlockHandling
                     , Language.ImpVM.StdLib.ColourOps
                     , Language.ImpVM.StdLib.Maths
                     , Language.ImpVM.StdLib.MatrixOps
                     , Language.ImpVM.StdLib.PostEffects
                     , Language.ImpVM.StdLib.Shapes
                     , Language.ImpVM.Types
                     , Language.ImpVM.VM
                     , Language.Interpreter
                     , Language.Interpreter.Operators
                     , Language.Interpreter.Scope
                     , Language.Interpreter.StdLib
                     , Language.Interpreter.StdLib.BlockHandling
                     , Language.Interpreter.StdLib.ColourOps
                     , Language.Interpreter.StdLib.Maths
                     , Language.Interpreter.StdLib.MatrixOps
                     , Language.Interpreter.StdLib.PostEffects
                     , Language.Interpreter.StdLib.Shapes
                     , Language.Interpreter.StdLib.Util
                     , Language.Interpreter.Types
                     , Language.Interpreter.Values
                     , Language.Parser
                     , Language.Parser.Errors
                     , Logging
                     , TestHelpers.GfxContext
                     , TestHelpers.GfxAst
                     , TestHelpers.Util
                     , Tests.Language.Ast.Transformers.Globalise
                     , Tests.Language.Interpreter
                     , Tests.Language.Interpreter.Blocks
                     , Tests.Language.Interpreter.Expressions
                     , Tests.Language.Interpreter.Functions
                     , Tests.Language.Interpreter.If
                     , Tests.Language.Interpreter.Lists
                     , Tests.Language.Interpreter.Loops
                     , Tests.Language.Interpreter.Operators
                     , Tests.Language.Interpreter.Scoping
                     , Tests.Language.Parser
                     , Tests.Language.Parser.Assignment
                     , Tests.Language.Parser.Blocks
                     , Tests.Language.Parser.ErrorCatching
                     , Tests.Language.Parser.Functions
                     , Tests.Language.Parser.General
                     , Tests.Language.Parser.If
                     , Tests.Language.Parser.Lists
                     , Tests.Language.Parser.Loops
                     , Tests.Language.Parser.Operators
                     , Tests.Language.Parser.Symbols
                     , Tests.Language.VM
                     , Util
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rumblesan/improviz
