name:                proviz
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/rumblesan/proviz#README.md
license:             BSD3
license-file:        LICENSE
author:              Guy John
maintainer:          guy@rumblesan.com
copyright:           Guy John and contributors
category:            Graphics
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

executable proviz
  hs-source-dirs:      src
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , containers
                     , parsec
                     , indents
                     , mtl
                     , GLURaw
                     , GLUT
                     , OpenGL
  other-modules:       Geometries
                     , GfxAst
                     , GfxInterpreter
                     , GfxEngineState
                     , LCLangLite
  default-language:    Haskell2010

test-suite proviz-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
                     , src
  main-is:             Spec.hs
  build-depends:       base
                     , containers
                     , parsec
                     , indents
                     , mtl
                     , HUnit
                     , test-framework
                     , test-framework-hunit
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  other-modules:       Geometries
                     , GfxAst
                     , GfxInterpreter
                     , GfxEngineState
                     , LCLangLite
                     , Tests.GfxInterpreter
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/rumblesan/proviz
